完善Xposed安全防范工具

--- a/Read/ReadAndroidWiki/01.基础组件/01.ActivityThread.md
+++ b/Read/ReadAndroidWiki/01.基础组件/01.ActivityThread.md
@@ -206,7 +206,7 @@
     }
     ```
 - 可以发现其回调了attachApplicationLocked方法，我们看一下这个方法的实现逻辑。这个在ActivityManagerService类中。
-    ```java
+    ``` java
      @GuardedBy("this")
     private final boolean attachApplicationLocked(IApplicationThread thread,
             int pid, int callingUid, long startSeq) {
@@ -244,8 +244,8 @@
     - 该方法执行了一系列的初始化操作，这样我们整个应用进程已经启动起来了。具体还是要看一下bindApplication这个方法。
 - 进去上面的方法看一下
     - thread.bindApplication() 
-    - ActivityThread.ApplicaitionThread # bindApplication()
-    ```java
+    - ActivityThread.ApplicationThread # bindApplication()
+    ``` java
     public final void bindApplication(String processName, ApplicationInfo appInfo,
             List<ProviderInfo> providers, ComponentName instrumentationName,
             ProfilerInfo profilerInfo, Bundle instrumentationArgs,
@@ -307,7 +307,7 @@
     }
     ```
     - 然后看一下哪里处理消息。可以看到调用了handleBindApplication方法。
-    ```java
+    ``` java
     public void handleMessage(Message msg) {
         if (DEBUG_MESSAGES) Slog.v(TAG, ">>> handling: " + codeToString(msg.what));
         switch (msg.what) {
@@ -320,7 +320,7 @@
     ```
 - 接着看一下handleBindApplication方法做了什么
     - ActivityThread中的handleBindApplication
-    ```java
+    ``` java
     private void handleBindApplication(AppBindData data) {
         //设置进程名字
         Process.setArgV0(data.processName);
@@ -352,18 +352,7 @@
     ```
 - 跟踪到mInstrumentation.callApplicationOnCreate(app);
     - 可以看到Application进入onCreate()方法中，这就是从最开始main()方法开始到最后的Application的onCreate（）的创建过程。
-    ```java
-    /**
-     * Perform calling of the application's {@link Application#onCreate}
-     * method.  The default implementation simply calls through to that method.
-     *
-     * <p>Note: This method will be called immediately after {@link #onCreate(Bundle)}.
-     * Often instrumentation tests start their test thread in onCreate(); you
-     * need to be careful of races between these.  (Well between it and
-     * everything else, but let's start here.)
-     *
-     * @param app The application being created.
-     */
+    ``` java
     public void callApplicationOnCreate(Application app) {
         app.onCreate();
     }
