--- a/Read/ReadAndroidWiki/15.经典总结/08.LeakCanary分析.md
+++ b/Read/ReadAndroidWiki/15.经典总结/08.LeakCanary分析.md
@@ -9,12 +9,6 @@
 
 
 ### 01.简单原理概述
-- 什么是内存泄漏
-    - 内存泄漏是不使用或用完的内存，因为某些原因无法回收，造成的一种内存浪费；内存泄漏的本质是内存浪费。
-    - 以个人理解来解释，通俗一点就是：
-        - 1.GC回收的对象必须是当前没有任何引用的对象。
-        - 2.当对象在使用完成后（对我们而言已经是垃圾对象了），我们没有释放该对象的引用，导致GC不能回收该对象而继续占用内存。
-        - 3.垃圾对象依旧占用内存，这块内存空间便浪费。
 - 首先思考几个问题
     - 在Application中初始化之后，它是如何检测所有的Activity页面的 ？
     - 内存泄漏的判定条件是什么 ？ 检测内存泄漏的机制原理是什么？
@@ -57,11 +51,7 @@
 
 ### 06.install初始化操作
 - LeakCanary.install(this) 干了什么？LeakCanary 的 install 方法实际上构造了一个 RefWatcher,
-    ```
-    /**
-       * Creates a {@link RefWatcher} that works out of the box, and starts watching activity
-       * references (on ICS+).
-       */
+    ``` java
     public static @NonNull RefWatcher install(@NonNull Application application) {
       return refWatcher(application)
           .listenerServiceClass(DisplayLeakService.class)
