--- a/Read/ReadMeWiki/00.方案实践/19.内存监控优化方案.md
+++ b/Read/ReadMeWiki/00.方案实践/19.内存监控优化方案.md
@@ -1,17 +1,81 @@
 #### 目录介绍
-- 01.Android 中如何获取一个App最大的内存数据
-- 02.查看Android 单个应用的内存详细数据
-- 03.查看系统配置一个进程的限制信息
-- 04.查看进程状态信息
+- 01.内存优化的概述
+    - 1.1 项目背景说明
+    - 1.2 遇到问题介绍
+    - 1.3 内存分析工具
+    - 1.4 设计目标
+- 02.内存信息解读介绍
+    - 2.1 一些名次解释
+    - 2.2 查手机运行内存信息
+    - 2.3 获取Android Dalvik配置信息
+    - 2.4 获取指定Apk的内存信息
+    - 2.5 查看一个进程限制信息
+    - 2.6 查看进程状态信息
+- 03.方案基础设计
+    - 3.1 整体架构图
+    - 3.2 UML设计图
+    - 3.3 关键流程图
+    - 3.4 接口设计图
+    - 3.5 模块间依赖关系
+- 04.一些技术要点说明
+    - 4.1 
+- 05.其他设计实践说明
+    - 5.1 性能设计
+    - 5.2 稳定性设计
+    - 5.3 灰度设计
+    - 5.4 降级设计
+    - 5.5 异常设计
 
 
 
 
+### 01.内存优化的概述
+#### 1.1 项目背景说明
+- 内存优化就是对内存问题的一个预防和解决，做内存优化能让应用挂得少、活得好和活得久。
+- 挂得少 “挂” 指的是 Crash
+    - 导致 Android 应用 Crash 的原因有很多种，而做内存优化就能让我们的应用避免由内存问题引起的 Crash。 内存问题导致 Crash 的具体表现就是内存溢出异常 OOM，引起 OOM 的原因有多种。
+- 活得好指的是使用流畅
+    - Android 中造成界面卡顿的原因有很多种，其中一种就是由内存问题引起的。 内存问题之所以会影响到界面流畅度，是因为垃圾回收（GC，Garbage Collection），在 GC 时，所有线程都要停止，包括主线程，当 GC 和绘制界面的操作同时触发时，绘制的执行就会被搁置，导致掉帧，也就是界面卡顿。 
+- 活得久指的是我们的应用在后台运行时不会被干掉。 
+    - Android 会按照特定的机制清理进程，清理进程时优先会考虑清理后台进程。 清理进程的机制就是低杀。 
+    - 用户在移动设备上使用应用的过程中被打断是很常见的，如果我们的应用不能活到用户回来的时候，要用户再次进行操作的体验就会很差。
+
+
+#### 1.2 遇到问题介绍
+- 问题描述：
+    - OOM不知道是从哪里开始出现的，没办法确定具体引发OOM的地方
+- 问题分析：
+    -  在OOM的时候如果去获取内存信息基本上是获取不到呢？原因是已经内存不足了，无法在创建数据
+- 修改建议：
+    - 可以在临近OOM的时候提前获取一下内存的数据信息，来辅助问题定位
 
 
 
+#### 1.4 设计目标
+- 一期方案的目的在于分析线上oom的问题根源，到底是什么原因产生的内存泄露，并且泄露的用户中占比有多大。
+- 线上问题分析
+    - 建立内存数据等相关指标数据，对指标问题进行梳理和定义；建立端上内存数据采集SDK，统计相关数据
+    - 分析线上数据，特别是Android 5.0～Android 7.0 这个区间、Android8.0以上的用户，对Ram 大小信息进行分析归类
+- 线下问题分析
+    - 建立so内存监控能力，分析so占用大小问题；对各种内存泄露问题case进行编写测试，复现相关场景
 
-### 01.Android 中如何获取一个App最大的内存数据
+
+### 02.内存信息解读介绍
+#### 2.1 一些名次解释
+##### 2.1.1 基础概念说明
+- VSS	 
+    - Virtual Set Size 虚拟耗用内存（包含共享库占用的内存）
+- RSS	 
+    - Resident Set Size 实际使用物理内存（包含共享库占用的内存）
+- PSS	
+    - Proportional Set Size 实际使用的物理内存（比例分配共享库占用的内存）
+- USS	
+    - Unique Set Size 进程独自占用的物理内存（不包含共享库占用的内存）
+- 大小规律：
+    - 一般来说内存占用大小有如下规律：VSS >= RSS >= PSS >= USS
+
+
+##### 2.1.2 一些adb命令
 - 应用启动后分配的初始内存：
     - adb shell getprop|grep dalvik.vm.heapstartsize
     - [dalvik.vm.heapstartsize]: [8m]
@@ -27,7 +91,63 @@
     - 另：设备不一样，最大内存的限制也可能不一样
 
 
-### 02.查看Android 单个应用的内存详细数据
+#### 2.2 查手机运行内存信息
+- 使用adb
+    - adb shell cat /proc/meminfo
+    - 具体信息看image中图片：手机运行内存信息
+- 下面先对"/proc/meminfo"文件里列出的字段进行粗略解释：
+    ```
+    MemTotal	所有可用RAM大小
+    MemFree	LowFree与HighFree的总和，被系统留着未使用的内存
+    Buffers	用来给文件做缓冲大小
+    Cached	 被高速缓冲存储器（cache memory）用的内存的大小（等于diskcache minus SwapCache）
+    SwapCached	被高速缓冲存储器（cache memory）用的交换空间的大小。已经被交换出来的内存，仍然被存放在swapfile中，用来在需要的时候很快的被替换而不需要再次打开I/O端口。
+    Active	在活跃使用中的缓冲或高速缓冲存储器页面文件的大小，除非非常必要，否则不会被移作他用。
+    Inactive	在不经常使用中的缓冲或高速缓冲存储器页面文件的大小，可能被用于其他途径。
+    SwapTotal	交换空间的总大小。
+    SwapFree	未被使用交换空间的大小。
+    Dirty	 等待被写回到磁盘的内存大小。
+    Writeback	 正在被写回到磁盘的内存大小。
+    AnonPages	未映射页的内存大小。
+    Mapped	设备和文件等映射的大小。
+    Slab	内核数据结构缓存的大小，可以减少申请和释放内存带来的消耗。
+    SReclaimable	:可收回Slab的大小。
+    SUnreclaim	不可收回Slab的大小（SUnreclaim+SReclaimable＝Slab）。
+    PageTables	管理内存分页页面的索引表的大小
+    NFS_Unstable	不稳定页表的大小。
+    ```
+ 
+
+#### 2.3 获取Android Dalvik配置信息
+- adb指令
+    - adb shell getprop|grep vm 
+- 下面先对"adb shell getprop|grep vm" 文件里列出的字段进行粗略解释：
+    ```
+    dalvik.vm.checkjni	是否要执行扩展的JNI检查，CheckJNI是一种添加额外JNI检查的模式；出于性能考虑，这些选项在默认情况下并不会启用。此类检查将捕获一些可能导致堆损坏的错误，例如使用无效/过时的局部和全局引用。如果这个值为false，则读取ro.kernel.android.checkjni的值
+    ro.kernel.android.checkjni	只读属性，是否要执行扩展的JNI检查。当dalvik.vm.checkjni为false，此值才生效
+    dalvik.vm.execution-mode	Dalvik虚拟机的执行模式，即：所使用的解释器，下文会讲解
+    dalvik.vm.stack-trace-file	指定堆栈跟踪文件路径
+    dalvik.vm.check-dex-sum	是否要检查dex文件的校验和
+    log.redirect-stdio	是否将stdout/stderr转换成log消息
+    dalvik.vm.enableassertions	是否启用断言
+    dalvik.vm.jniopts	JNI可选配置
+    dalvik.vm.heapstartsize	堆的起始大小
+    dalvik.vm.heapsize	堆的大小
+    dalvik.vm.jit.codecachesize	JIT代码缓存大小
+    dalvik.vm.heapgrowthlimit	堆增长的限制
+    dalvik.vm.heapminfree	堆的最小剩余空间
+    dalvik.vm.heapmaxfree	堆的最大剩余空间
+    dalvik.vm.heaptargetutilization	理想的堆内存利用率，其取值位于0与1之间
+    ro.config.low_ram	该设备是否是低内存设备
+    dalvik.vm.dexopt-flags	是否要启用dexopt特性，例如字节码校验以及为精确GC计算寄存器映射
+    dalvik.vm.lockprof.threshold	控制Dalvik虚拟机调试记录程序内部锁资源争夺的阈值
+    dalvik.vm.jit.op	对于指定的操作码强制使用解释模式
+    dalvik.vm.jit.method	对于指定的方法强制使用解释模式
+    dalvik.vm.extra-opts	其他选项
+    ```
+
+
+#### 2.4 获取指定Apk的内存信息
 - adb指令
     - adb shell dumpsys meminfo org.yczbj.ycvideoplayer
     - 注意：org.yczbj.ycvideoplayer需要换成你需要的apk包名
@@ -88,7 +208,7 @@
     ```
 
 
-### 03.查看系统配置一个进程的限制信息
+#### 2.5 查看一个进程限制信息
 - adb指令
     - adb shell cat /proc/29239/limits
     ```
@@ -115,7 +235,7 @@
     ```
 
 
-### 04.查看进程状态信息
+#### 2.6 查看进程状态信息
 - adb指令
     - adb shell cat /proc/29239/status
 - 信息如下
@@ -181,7 +301,12 @@
 
 
 
- 
- 
- 
- 
+
+
+
+
+
+
+
+
+
