--- a/Read/ReadMeWiki/00.方案实践/32.App动画封装库实践.md
+++ b/Read/ReadMeWiki/00.方案实践/32.App动画封装库实践.md
@@ -1,2 +1,25 @@
 #### 目录介绍
 
+
+
+
+
+
+
+Android动画类型分类
+- 逐帧动画【Frame Animation】，即顺序播放事先做好的图像，跟电影类似
+- 补间动画【Tween Animation】，即通过对场景里的对象不断做图像变换 ( 平移、缩放、旋转 ) 产生动画效果
+- 属性动画【Property Animation】，补间动画增强版，支持对对象执行动画
+- 过渡动画【Transition Animation】,实现Activity或View过渡动画效果
+
+
+
+
+
+
+
+
+
+
+
+
