--- a/Read/ReadShareWiki/00.综合专项/00.杨充个人简历.md
+++ b/Read/ReadShareWiki/00.综合专项/00.杨充个人简历.md
@@ -35,6 +35,7 @@
     - 懂得一些Crash治理，事前针对常见崩溃总结和review代码规范，事中及时止损或者降级，同时维护崩溃监控库日志记录。
     - 熟悉组件化开发，模块分层，在立思辰承接多个app组件化抽离复用，提高开发效率，为后期多个定制开发平板app提供高效支持。
     - 懂得一些App稳定性治理，通过崩溃监控，核心链路埋点，降级处理，异常设计，代码串讲，技术复盘等手段，达到app稳定性指标。
+    - 懂得一些安全防护的知识，
 
 
 ### 3.一些产出
