--- a/Read/ReadShareWiki/00.综合专项/01.个人简历复习.md
+++ b/Read/ReadShareWiki/00.综合专项/01.个人简历复习.md
@@ -30,7 +30,7 @@
         - 比如说，针对磁盘缓存file查看工具，采用Deque队列管理页面回退
         - 主要是复习HashMap，LinkedHashMap(淘汰算法)，还有线程安全的 ConcurrentHashMap ，主要是怎么保证线程安全和提高效率
     - 熟悉面向对象编程思想，熟练运用设计模式原则，写出高质量可复用，拓展性强，方便维护和阅读的代码，具体可见技术产出库。
-        - 比方说，设计了通用视频播放器，
+        - 比方说，设计了通用视频播放器
         - 比方说，设计地图和flutter交互，地图元素碰撞后偏移
         - 比方说，
     - 熟悉Http协议，熟悉常用状态码，知道https请求传输数据过程，较为熟悉网络协议知识点，开发过网络请求拦截日志信息工具，有接口健壮性自测能力。
@@ -38,6 +38,7 @@
         - 接口健壮性自测，熟练mock数据，针对返回类型，比如字符串，空数据，长字符串，有数据，null处理。int，对象，数据
     - 熟悉Android中四大组件，Handler通信机制，IPC机制，Window，AMS，WMS，等基础原理，并实际开发灵活运用。
         - 熟悉activity启动流程，布局加载流程，
+        - Handler通信机制
 - 中高级技术点
     - 熟悉一些常用设计模式，比如单利模式，builder模式，工厂模式，订阅者模式，并且运用于实践项目开发中等等。
         - 比如构造复杂的对象，使用builder模式
@@ -53,6 +54,7 @@
         - 组件化拆分，如何拆分，如何分层，复用机制怎么弄，遇到过那些坑，都可以说一下
         - 组件module之间通信
     - 熟悉组件化开发，模块分层，在立思辰承接多个app组件化抽离复用，提高开发效率，为后期多个定制开发平板app提供高效支持。
+        - 模板开发
     - 懂得一些Crash治理，事前针对常见崩溃总结和review代码规范，事中及时止损或者降级，同时维护崩溃监控库日志记录。
         - crash治理准则，由点到面，不能随便catch，预防大于治疗
         - 常见crash，空指针，索引越界，转化异常等，对象非空判断，封装adpater刷新数据，基本数据类型转化catch，主要是总结梳理文档，避免不规范代码异常
