通知栏增加NonNull

--- a/Read/ReadJavaWiki/14.Java深入/02.四种引用分析比较.md
+++ b/Read/ReadJavaWiki/14.Java深入/02.四种引用分析比较.md
@@ -1,8 +1,27 @@
 #### 目录介绍
+- 01.四种引用介绍
+    - 1.1 引用说明
+    - 1.2 为何需要4种引用
+    - 1.3 引用类型有哪些
+- 02.一般使用场景
+    - 2.1 强引用场景
+    - 2.2 软引用场景
+- 03.引用原理说明
 
 
 
+### 01.四种引用介绍
+#### 1.1 引用说明
+- java.lang.ref包中提供了几个类：
+    - SoftReference类、WeakReference类和PhantomReference类，它们分别代表软引用、弱引用和虚引用。
+    - ReferenceQueue类表示引用队列，它可以和这三种引用类联合使用，以便跟踪Java虚拟机回收所引用的对象的活动。
 
+
+#### 1.2 为何需要4种引用
+
+
+
+#### 1.3 引用类型有哪些
 - 引用类型有哪些种
     - 强引用：默认的引用方式，不会被垃圾回收，JVM宁愿抛出OutOfMemory错误也不会回收这种对象。
     - 软引用（SoftReference）：如果一个对象只被软引用指向，只有内存空间不足够时，垃圾回收器才会回收它；
@@ -10,53 +29,18 @@
     - 虚引用（PhantomReference）：虚引用和前面的软引用、弱引用不同，它并不影响对象的生命周期。如果一个对象与虚引用关联，则跟没有引用与之关联一样，在任何时候都可能被垃圾回收器回收。虚引用通常和ReferenceQueue配合使用。
 
 
-### 0.关于四种引用
-#### 0.1 引用说明
-- java.lang.ref包中提供了几个类：SoftReference类、WeakReference类和PhantomReference类，它们分别代表软引用、弱引用和虚引用。ReferenceQueue类表示引用队列，它可以和这三种引用类联合使用，以便跟踪Java虚拟机回收所引用的对象的活动。
-
-
-#### 0.2 关于Java下ref包和Android下ref包
-- 在Android下的ref包结构
-    - ![image](https://upload-images.jianshu.io/upload_images/4432347-68832dc8662c883d.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-- 在java下的ref包
-    - ![image](https://upload-images.jianshu.io/upload_images/4432347-a2b129d4f16158fe.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-
-
-
-
-#### 1.3 理解Java对象引用
-- （1）强引用（Strong Reference）：
-    - 如“Object obj = new Object（）”，这类引用是Java程序中最普遍的。只要强引用还存在，垃圾收集器就永远不会回收掉被引用的对象。
-- （2）软引用（Soft Reference）：
-    - 它用来描述一些可能还有用，但并非必须的对象。在系统内存不够用时，这类引用关联的对象将被垃圾收集器回收。JDK1.2之后提供了SoftReference类来实现软引用。
-- （3）弱引用（Weak Reference）：
-    - 它也是用来描述非须对象的，但它的强度比软引用更弱些，被弱引用关联的对象只能生存到下一次垃圾收集发生之前。当垃圾收集器工作时，无论当前内存是否足够，都会回收掉只被弱引用关联的对象。在JDK1.2之后，提供了WeakReference类来实现弱引用。
-- （4）虚引用（Phantom Reference）：
-    - 最弱的一种引用关系，完全不会对其生存时间构成影响，也无法通过虚引用来取得一个对象实例。为一个对象设置虚引用关联的唯一目的是希望能在这个对象被收集器回收时收到一个系统通知。JDK1.2之后提供了PhantomReference类来实现虚引用。
-
-
-
-### 1.强引用
-#### 1.0 关于强引用引用的场景
-- 直接new出来的对象
-- String str = new String("yc");
-
-
-#### 1.1 强引用介绍
-- 强引用是使用最普遍的引用。如果一个对象具有强引用，那垃圾回收器绝不会回收它。当内存空间不足，Java虚拟机宁愿抛出OutOfMemoryError错误，使程序异常终止，也不会靠随意回收具有强引用的对象来解决内存不足的问题。
-- 通过引用，可以对堆中的对象进行操作。在某个函数中，当创建了一个对象，该对象被分配在堆中，通过这个对象的引用才能对这个对象进行操作。
-
-
-#### 1.2 强引用的特点
-- 强引用可以直接访问目标对象。
-- 强引用所指向的对象在任何时候都不会被系统回收。JVM宁愿抛出OOM异常，也不会回收强引用所指向的对象。
-- 强引用可能导致内存泄露。
-- 注意相互引用情况
-
-
-#### 1.3 如何回收强引用
-- 如果想中断强引用和某个对象之间的关联，可以显示地将引用赋值为null，这样一来的话，JVM在合适的时间就会回收该对象。
-- 看看Vector类的清理方法：在清除数据的时候，将数组中的每个元素都置为null，中断强引用与对象之间的关系，让GC的时候能够回收这些对象的内存。
+### 02.一般使用场景
+#### 2.1 强引用场景
+- 关于强引用引用的场景，直接new出来的对象
+    - String str = new String("yc");
+- 强引用介绍
+    - 强引用是使用最普遍的引用。如果一个对象具有强引用，那垃圾回收器绝不会回收它。当内存空间不足，Java虚拟机宁愿抛出OutOfMemoryError错误，使程序异常终止，也不会靠随意回收具有强引用的对象来解决内存不足的问题。
+    - 通过引用，可以对堆中的对象进行操作。在某个函数中，当创建了一个对象，该对象被分配在堆中，通过这个对象的引用才能对这个对象进行操作。
+- 强引用的特点
+    - 强引用可以直接访问目标对象。强引用可能导致内存泄露。注意相互引用情况。
+- 如何回收强引用
+    - 如果想中断强引用和某个对象之间的关联，可以显示地将引用赋值为null，这样一来的话，JVM在合适的时间就会回收该对象。
+    - 看看Vector类的清理方法：在清除数据的时候，将数组中的每个元素都置为null，中断强引用与对象之间的关系，让GC的时候能够回收这些对象的内存。
     ```
     protected Object[] elementData;
     
@@ -69,12 +53,14 @@
         elementCount = 0;
     }
     ```
+- 思考：将引用设置成null后在什么时候jvm回收对象呢？
 
 
-### 2.软引用
-#### 2.0 关于SoftReference软引用
-- SoftReference：软引用–>当虚拟机内存不足时，将会回收它指向的对象；需要获取对象时，可以调用get方法。
-- 可以通过java.lang.ref.SoftReference使用软引用。一个持有软引用的对象，不会被JVM很快回收，JVM会根据当前堆的使用情况来判断何时回收。当堆的使用率临近阈值时，才会回收软引用的对象。
+
+#### 2.2 软引用场景
+- 关于SoftReference软引用
+    - SoftReference：软引用–>当虚拟机内存不足时，将会回收它指向的对象；需要获取对象时，可以调用get方法。
+    - 可以通过java.lang.ref.SoftReference使用软引用。一个持有软引用的对象，不会被JVM很快回收，JVM会根据当前堆的使用情况来判断何时回收。当堆的使用率临近阈值时，才会回收软引用的对象。
 
 
 #### 2.1 软引用应用场景
