--- a/Read/ReadMeWiki/00.方案实践/16.内存治理优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/16.内存治理优化实践.md
@@ -205,8 +205,9 @@
     - 软引用（SoftReference）：如果一个对象只被软引用指向，只有内存空间不足够时，垃圾回收器才会回收它；
     - 弱引用（WeakReference）：如果一个对象只被弱引用指向，当JVM进行垃圾回收时，无论内存是否充足，都会回收该对象。
     - 虚引用（PhantomReference）：虚引用和前面的软引用、弱引用不同，它并不影响对象的生命周期。如果一个对象与虚引用关联，则跟没有引用与之关联一样，在任何时候都可能被垃圾回收器回收。虚引用通常和ReferenceQueue配合使用。
-
-
+- 一般使用场景
+    - 强引用，直接new出来的对象，通过引用对堆里面的对象进行操作，可能会导致内存泄漏，一般内存优化主要是针对强引用优化。可以显示地将引用赋值为null，JVM在合适的时间就会回收该对象。
+    - 
 
 
 ### 01.概述
