完善引用优化

--- a/Read/ReadMeWiki/00.方案实践/16.内存治理优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/16.内存治理优化实践.md
@@ -207,7 +207,16 @@
     - 虚引用（PhantomReference）：虚引用和前面的软引用、弱引用不同，它并不影响对象的生命周期。如果一个对象与虚引用关联，则跟没有引用与之关联一样，在任何时候都可能被垃圾回收器回收。虚引用通常和ReferenceQueue配合使用。
 - 一般使用场景
     - 强引用，直接new出来的对象，通过引用对堆里面的对象进行操作，可能会导致内存泄漏，一般内存优化主要是针对强引用优化。可以显示地将引用赋值为null，JVM在合适的时间就会回收该对象。
-    - 
+    - 软引用，使用SoftReference包装对象，比如图片缓存，频率使用高且内存容易吃紧，使用软引用可以在内存紧张时释放一些对象。
+    - 弱引用，使用WeakReference包装对象，比如Handler内存泄漏，主要是Activity释放后handler依然持有Activity，这个时候可以采用弱引用优化。
+- 使用软引用或者弱引用防止内存泄漏
+    - 在Android应用的开发中，为了防止内存溢出，在处理一些占用内存大而且声明周期较长的对象时候，可以尽量应用软引用和弱引用技术。
+    - 软引用，弱引用都非常适合来保存那些可有可无的缓存数据。如果这样做，当系统内存不足时，这些缓存数据会被回收，不会导致内存溢出。而当内存资源充足时，这些缓存数据又可以存在相当长的时间。
+- 软引用VS弱引用选择
+    - 个人认为，如果只是想避免OutOfMemory异常的发生，则可以使用软引用。如果对于应用的性能更在意，想尽快回收一些占用内存比较大的对象，则可以使用弱引用。
+    - 还有就是可以根据对象是否经常使用来判断。如果该对象可能会经常使用的，就尽量用软引用。如果该对象不被使用的可能性更大些，就可以用弱引用。
+
+
 
 
 ### 01.概述
