--- a/Read/ReadJavaWiki/14.Java深入/02.四种引用分析比较.md
+++ b/Read/ReadJavaWiki/14.Java深入/02.四种引用分析比较.md
@@ -6,6 +6,9 @@
 - 02.一般使用场景
     - 2.1 强引用场景
     - 2.2 软引用场景
+    - 2.3 弱引用场景
+    - 2.4 虚引用场景
+    - 2.5 四种引用比较
 - 03.引用原理说明
 
 
@@ -61,30 +64,18 @@
 - 关于SoftReference软引用
     - SoftReference：软引用–>当虚拟机内存不足时，将会回收它指向的对象；需要获取对象时，可以调用get方法。
     - 可以通过java.lang.ref.SoftReference使用软引用。一个持有软引用的对象，不会被JVM很快回收，JVM会根据当前堆的使用情况来判断何时回收。当堆的使用率临近阈值时，才会回收软引用的对象。
-
-
-#### 2.1 软引用应用场景
-- 例如从网络上获取图片，然后将获取的图片显示的同时，通过软引用缓存起来。当下次再去网络上获取图片时，首先会检查要获取的图片缓存中是否存在，若存在，直接取出来，不需要再去网络上获取。
-
-
-#### 2.2 软引用的简单使用
-- 用法如下
-    ```java
+- 软引用应用场景
+    - 例如从网络上获取图片，然后将获取的图片显示的同时，通过软引用缓存起来。当下次再去网络上获取图片时，首先会检查要获取的图片缓存中是否存在，若存在，直接取出来，不需要再去网络上获取。
+- 软引用的简单使用用法如下
+    ``` java
     MyObject aRef = new  MyObject();
     SoftReference aSoftRef = new SoftReference(aRef);
     MyObject anotherRef = (MyObject)aSoftRef.get();
     ```
-
-
-#### 2.3 软引用的特点
-- **2.3.1 特点：**
-    - 如果一个对象只具有软引用，那么如果内存空间足够，垃圾回收器就不会回收它；如果内存空间不足了，就会回收这些对象的内存。只要垃圾回收器没有回收它，该对象就可以被程序使用。软引用可用来实现内存敏感的高速缓存。软引用可以和一个引用队列（ReferenceQueue）联合使用，如果软引用所引用的对象被垃圾回收，Java虚拟机就会把这个软引用加入到与之关联的引用队列中。
-- **2.3.2 代码如下**
-    ```java
-    ReferenceQueue queue = new  ReferenceQueue();
-    SoftReference  ref = new  SoftReference(aMyObject, queue);
-    ```
-- **2.3.3 如何回收：**
+- 软引用的特点
+    - 如果一个对象只具有软引用，那么如果内存空间足够，垃圾回收器就不会回收它；如果内存空间不足了，就会回收这些对象的内存。只要垃圾回收器没有回收它，该对象就可以被程序使用。
+    - 软引用可用来实现内存敏感的高速缓存。软引用可以和一个引用队列（ReferenceQueue）联合使用，如果软引用所引用的对象被垃圾回收，Java虚拟机就会把这个软引用加入到与之关联的引用队列中。
+- 如何回收软引用
     - 那么当这个SoftReference所软引用的aMyOhject被垃圾收集器回收的同时，ref所强引用的SoftReference对象被列入ReferenceQueue。也就是说，ReferenceQueue中保存的对象是Reference对象，而且是已经失去了它所软引用的对象的Reference对象。另外从ReferenceQueue这个名字也可以看出，它是一个队列，当我们调用它的poll()方法的时候，如果这个队列中不是空队列，那么将返回队列前面的那个Reference对象。
     - 在任何时候，我们都可以调用ReferenceQueue的poll()方法来检查是否有它所关心的非强可及对象被回收。如果队列为空，将返回一个null,否则该方法返回队列中前面的一个Reference对象。利用这个方法，我们可以检查哪个SoftReference所软引用的对象已经被回收。于是我们可以把这些失去所软引用的对象的SoftReference对象清除掉。
     - 常用的方式为
@@ -94,56 +85,29 @@
         // 清除ref
     }
     ```
-
-
-#### 2.4 实际应用案例
-- **2.4.1 正常是用来处理图片这种占用内存大的情况**
-- 代码如下所示
-    ```
-    View view = findViewById(R.id.button);
-    Bitmap bitmap = BitmapFactory.decodeResource(getResources(),R.drawable.ic_launcher);
-    Drawable drawable = new BitmapDrawable(bitmap);
-    SoftReference<Drawable> drawableSoftReference = new SoftReference<Drawable>(drawable);
-    if(drawableSoftReference != null) {
-        view.setBackground(drawableSoftReference.get());
-    }
-    ```
-
-- **2.4.2 这样使用软引用好处**
+- 实际应用案例
+    - 正常是用来处理图片这种占用内存大的情况
+- 这样使用软引用好处
     - 通过软引用的get()方法，取得drawable对象实例的强引用，发现对象被未回收。在GC在内存充足的情况下，不会回收软引用对象。此时view的背景显示
-    - 实际情况中,我们会获取很多图片.然后可能给很多个view展示, 这种情况下很容易内存吃紧导致oom,内存吃紧，系统开始会GC。这次GC后，drawables.get()不再返回Drawable对象，而是返回null，这时屏幕上背景图不显示，说明在系统内存紧张的情况下，软引用被回收。
+    - 实际情况中,我们会获取很多图片，然后可能给很多个view展示, 这种情况下很容易内存吃紧导致oom,内存吃紧，系统开始会GC。这次GC后，drawables.get()不再返回Drawable对象，而是返回null，这时屏幕上背景图不显示，说明在系统内存紧张的情况下，软引用被回收。
     - 使用软引用以后，在OutOfMemory异常发生之前，这些缓存的图片资源的内存空间可以被释放掉的，从而避免内存达到上限，避免Crash发生。
+- 注意避免软引用获取对象为null
+    - 在垃圾回收器对这个Java对象回收前，SoftReference类所提供的get方法会返回Java对象的强引用，一旦垃圾线程回收该Java对象之后，get方法将返回null。所以在获取软引用对象的代码中，一定要判断是否为null，以免出现NullPointerException异常导致应用崩溃。
 
 
-#### 2.5 注意避免软引用获取对象为null
-- 在垃圾回收器对这个Java对象回收前，SoftReference类所提供的get方法会返回Java对象的强引用，一旦垃圾线程回收该Java对象之后，get方法将返回null。所以在获取软引用对象的代码中，一定要判断是否为null，以免出现NullPointerException异常导致应用崩溃。
-
-
-
-
-### 3.弱引用
-#### 3.0 关于WeakReference弱引用
-- **3.0.1 WeakReference**
+#### 2.3 弱引用场景
+- 关于WeakReference弱引用
+- WeakReference
     - 弱引用–>随时可能会被垃圾回收器回收，不一定要等到虚拟机内存不足时才强制回收。要获取对象时，同样可以调用get方法。
-- **3.0.2 特点**
+- 特点
     - 如果一个对象只具有弱引用，那么在垃圾回收器线程扫描的过程中，一旦发现了只具有弱引用的对象，不管当前内存空间足够与否，都会回收它的内存。不过，由于垃圾回收器是一个优先级很低的线程，因此不一定会很快发现那些只具有弱引用的对象。
     - 弱引用也可以和一个引用队列（ReferenceQueue）联合使用，如果弱引用所引用的对象被垃圾回收，Java虚拟机就会把这个弱引用加入到与之关联的引用队列中。
-
-
-
-#### 3.1 WeakReference：防止内存泄漏，要保证内存被虚拟机回收
-- **3.1.1 先看一个handler小案例【千万不要忽视淡黄色警告】**
-    - ![image](https://upload-images.jianshu.io/upload_images/4432347-cae2b5c8d26bae88.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-- **3.1.2 为什么这样会造成内存泄漏**
-    - 这种情况就是由于android的特殊机制造成的：当一个android主线程被创建的时候，同时会有一个Looper对象被创建，而这个Looper对象会实现一个MessageQueue(消息队列)，当我们创建一个handler对象时，而handler的作用就是放入和取出消息从这个消息队列中，每当我们通过handler将一个msg放入消息队列时，这个msg就会持有一个handler对象的引用。因此当Activity被结束后，这个msg在被取出来之前，这msg会继续存活，但是这个msg持有handler的引用，而handler在Activity中创建，会持有Activity的引用，因而当Activity结束后，Activity对象并不能够被gc回收，因而出现内存泄漏。
-- **3.1.3 根本原因**
-    - Activity在被结束之后，MessageQueue并不会随之被结束，如果这个消息队列中存在msg，则导致持有handler的引用，但是又由于Activity被结束了，msg无法被处理，从而导致永久持有handler对象，handler永久持有Activity对象，于是发生内存泄漏。但是为什么为static类型就会解决这个问题呢？因为在java中所有非静态的对象都会持有当前类的强引用，而静态对象则只会持有当前类的弱引用。声明为静态后，handler将会持有一个Activity的弱引用，而弱引用会很容易被gc回收，这样就能解决Activity结束后，gc却无法回收的情况。
-    - 当然解决源头还是在Activity退出的时候，移除Handler内部消息队列的数据。
-
-
-#### 3.2 弱引用解决办法
-- 代码如下所示
-    ```java
+- 防止内存泄漏，要保证内存被虚拟机回收
+    - 为什么handler会造成内存泄漏？这种情况就是由于android的特殊机制造成的：当一个android主线程被创建的时候，同时会有一个Looper对象被创建，而这个Looper对象会实现一个MessageQueue(消息队列)，当我们创建一个handler对象时，而handler的作用就是放入和取出消息从这个消息队列中，每当我们通过handler将一个msg放入消息队列时，这个msg就会持有一个handler对象的引用。因此当Activity被结束后，这个msg在被取出来之前，这msg会继续存活，但是这个msg持有handler的引用，而handler在Activity中创建，会持有Activity的引用，因而当Activity结束后，Activity对象并不能够被gc回收，因而出现内存泄漏。
+- 根本原因
+    - Activity在被结束之后，MessageQueue并不会随之被结束，如果这个消息队列中存在msg，则导致持有handler的引用，但是又由于Activity被结束了，msg无法被处理，从而导致永久持有handler对象，handler永久持有Activity对象，于是发生内存泄漏。但是为什么为static类型就会解决这个问题呢？因为在java中所有非静态的对象都会持有当前类的强引用，而静态对象则只会持有当前类的弱引用。声明为静态后，handler将会持有一个Activity的弱引用，而弱引用会很容易被gc回收，这样就能解决Activity结束后，gc却无法回收的情况。当然解决源头还是在Activity退出的时候，移除Handler内部消息队列的数据。
+- 解决办法，采用弱引用管理handler，代码如下所示
+    ``` java
     private MyHandler handler = new MyHandler(this);
     private static class MyHandler extends Handler{
         WeakReference<FirstActivity> weakReference;
@@ -160,35 +124,24 @@
     }
     ```
 
-#### 3.3 弱引用实际应用案例
-- 具体案例可以参考我的代码：https://github.com/yangchong211/YCVideoPlayer
-![image](https://upload-images.jianshu.io/upload_images/4432347-61c7a51deb84ff9e.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-![image](https://upload-images.jianshu.io/upload_images/4432347-ec6f0d2e396edc76.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 
-### 4.虚引用
-#### 4.0 关于PhantomReference类虚引用
-- 虚引用是所有引用类型中最弱的一个。一个持有虚引用的对象，和没有引用几乎是一样的，随时都可能被垃圾回收器回收。当试图通过虚引用的get()方法取得强引用时，总是会失败。并且，虚引用必须和引用队列一起使用，它的作用在于跟踪垃圾回收过程。 当垃圾回收器准备回收一个对象时，如果发现它还有虚引用，就会在垃圾回收后，销毁这个对象，奖这个虚引用加入引用队列。
+#### 2.4 虚引用场景
+- 关于PhantomReference类虚引用
+    - 虚引用是所有引用类型中最弱的一个。一个持有虚引用的对象，和没有引用几乎是一样的，随时都可能被垃圾回收器回收。当试图通过虚引用的get()方法取得强引用时，总是会失败。并且，虚引用必须和引用队列一起使用，它的作用在于跟踪垃圾回收过程。 当垃圾回收器准备回收一个对象时，如果发现它还有虚引用，就会在垃圾回收后，销毁这个对象，奖这个虚引用加入引用队列。
+- Android实际开发中没有用到过
+    - 貌似开发中没有接触过虚引用
 
-#### 4.1 Android实际开发中没有用到过
-- 貌似开发中没有接触过虚引用
-
-
-### 5.四种引用其他介绍
-#### 5.1 弱引用和软引用区别
-- 弱引用与软引用的根本区别在于：只具有弱引用的对象拥有更短暂的生命周期，可能随时被回收。而只具有软引用的对象只有当内存不够的时候才被回收，在内存足够的时候，通常不被回收。
-
-#### 5.2 使用软引用或者弱引用防止内存泄漏
-- 在Android应用的开发中，为了防止内存溢出，在处理一些占用内存大而且声明周期较长的对象时候，可以尽量应用软引用和弱引用技术。
-- 软引用，弱引用都非常适合来保存那些可有可无的缓存数据。如果这样做，当系统内存不足时，这些缓存数据会被回收，不会导致内存溢出。而当内存资源充足时，这些缓存数据又可以存在相当长的时间。
-
-#### 5.3 到底什么时候使用软引用，什么时候使用弱引用呢？
-- 个人认为，如果只是想避免OutOfMemory异常的发生，则可以使用软引用。如果对于应用的性能更在意，想尽快回收一些占用内存比较大的对象，则可以使用弱引用。
-- 还有就是可以根据对象是否经常使用来判断。如果该对象可能会经常使用的，就尽量用软引用。如果该对象不被使用的可能性更大些，就可以用弱引用。
-- 另外，和弱引用功能类似的是WeakHashMap。WeakHashMap对于一个给定的键，其映射的存在并不阻止垃圾回收器对该键的回收，回收以后，其条目从映射中有效地移除。WeakHashMap使用ReferenceQueue实现的这种机制。
-
-#### 5.4 四种引用用一张表总结[摘自网络]
-- ![image](https://www.2cto.com/uploadfile/Collfiles/20160924/20160924095027628.png)
+#### 2.5 四种引用比较
+- 弱引用和软引用区别
+    - 只具有弱引用的对象拥有更短暂的生命周期，可能随时被回收。而只具有软引用的对象只有当内存不够的时候才被回收，在内存足够的时候，通常不被回收。
+- 使用软引用或者弱引用防止内存泄漏
+    - 在Android应用的开发中，为了防止内存溢出，在处理一些占用内存大而且声明周期较长的对象时候，可以尽量应用软引用和弱引用技术。
+    - 软引用，弱引用都非常适合来保存那些可有可无的缓存数据。如果这样做，当系统内存不足时，这些缓存数据会被回收，不会导致内存溢出。而当内存资源充足时，这些缓存数据又可以存在相当长的时间。
+- 到底什么时候使用软引用，什么时候使用弱引用呢？
+    - 个人认为，如果只是想避免OutOfMemory异常的发生，则可以使用软引用。如果对于应用的性能更在意，想尽快回收一些占用内存比较大的对象，则可以使用弱引用。
+    - 还有就是可以根据对象是否经常使用来判断。如果该对象可能会经常使用的，就尽量用软引用。如果该对象不被使用的可能性更大些，就可以用弱引用。
+    - 另外，和弱引用功能类似的是WeakHashMap。WeakHashMap对于一个给定的键，其映射的存在并不阻止垃圾回收器对该键的回收，回收以后，其条目从映射中有效地移除。WeakHashMap使用ReferenceQueue实现的这种机制。
 
 
 
