--- a/Read/ReadShareWiki/00.综合专项/00.杨充个人简历.md
+++ b/Read/ReadShareWiki/00.综合专项/00.杨充个人简历.md
@@ -19,7 +19,7 @@
 ### 2.专业技能
 - 基础技能
     - 6年的Android开发经验，能独立地完成开发的工作。有github封装库长期维护的库！有组件化项目经验！
-    - 理解基本数据类型和包装类原理，并且开发中避免常识性bug，对泛型，线程，反射，异常，引用等有较深理解，具有扎实的Java语言基础。
+    - 理解基本数据类型和包装类原理，并且开发中避免常识性bug，对泛型，线程，反射，异常，引用优化等有较深理解，具有扎实的Java语言基础。
     - 对数据结构比如常见List，Map，Set，Deque，Stack等熟悉，能够结合实际场景选择合适的集合。
     - 熟悉面向对象编程思想，熟练运用设计模式原则，写出高质量可复用，拓展性强，方便维护和阅读的代码，具体可见技术产出库。
     - 熟悉Http协议，熟悉常用状态码，知道https请求传输数据过程，较为熟悉网络协议知识点，开发过网络请求拦截日志信息工具，有接口健壮性自测能力。
