完善glide加载图片监听进度代码注释

--- a/Read/ReadAndroidWiki/10.Window/04.Dialog源码分析.md
+++ b/Read/ReadAndroidWiki/10.Window/04.Dialog源码分析.md
@@ -16,23 +16,107 @@
 
 
 
-### 好消息
-- 博客笔记大汇总【16年3月到至今】，包括Java基础及深入知识点，Android技术博客，Python学习笔记等等，还包括平时开发中遇到的bug汇总，当然也在工作之余收集了大量的面试题，长期更新维护并且修正，持续完善……开源的文件是markdown格式的！同时也开源了生活博客，从12年起，积累共计47篇[近20万字]，转载请注明出处，谢谢！
-- **链接地址：https://github.com/yangchong211/YCBlogs**
-- 如果觉得好，可以star一下，谢谢！当然也欢迎提出建议，万事起于忽微，量变引起质变！
-- DialogFragment封装库项目地址：https://github.com/yangchong211/YCDialog
-- [02.Toast源码深度分析](https://github.com/yangchong211/YCBlogs/blob/master/android/Window/02.Toast%E6%BA%90%E7%A0%81%E6%B7%B1%E5%BA%A6%E5%88%86%E6%9E%90.md)
-    - 最简单的创建，简单改造避免重复创建，show()方法源码分析，scheduleTimeoutLocked吐司如何自动销毁的，TN类中的消息机制是如何执行的，普通应用的Toast显示数量是有限制的，用代码解释为何Activity销毁后Toast仍会显示，Toast偶尔报错Unable to add window是如何产生的，Toast运行在子线程问题，Toast如何添加系统窗口的权限等等
-- [03.DialogFragment源码分析](https://github.com/yangchong211/YCBlogs/blob/master/android/Window/03.DialogFragment%E6%BA%90%E7%A0%81%E5%88%86%E6%9E%90.md)
-    - 最简单的使用方法，onCreate(@Nullable Bundle savedInstanceState)源码分析，重点分析弹窗展示和销毁源码，使用中show()方法遇到的IllegalStateException分析
-- [05.PopupWindow源码分析](https://github.com/yangchong211/YCBlogs/blob/master/android/Window/05.PopupWindow%E6%BA%90%E7%A0%81%E5%88%86%E6%9E%90.md)
-    - 显示PopupWindow，注意问题宽和高属性，showAsDropDown()源码，dismiss()源码分析，PopupWindow和Dialog有什么区别？为何弹窗点击一下就dismiss呢？
-- [06.Snackbar源码分析](https://github.com/yangchong211/YCBlogs/blob/master/android/Window/06.Snackbar%E6%BA%90%E7%A0%81%E5%88%86%E6%9E%90.md)
-    - 最简单的创建，Snackbar的make方法源码分析，Snackbar的show显示与点击消失源码分析，显示和隐藏中动画源码分析，Snackbar的设计思路，为什么Snackbar总是显示在最下面
-- [07.弹窗常见问题](https://github.com/yangchong211/YCBlogs/blob/master/android/Window/07.%E5%BC%B9%E7%AA%97%E5%B8%B8%E8%A7%81%E9%97%AE%E9%A2%98.md)
-    - DialogFragment使用中show()方法遇到的IllegalStateException,什么常见产生的？Toast偶尔报错Unable to add window，Toast运行在子线程导致崩溃如何解决？
-- [08.Builder模式](https://github.com/yangchong211/YCBlogs/blob/master/android/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/02.Builder%E6%A8%A1%E5%BC%8F.md)
-    - Builder模式使用场景，简单案例，Builder模式实际案例Demo展示，看看AlertDialog.Builder源代码如何实现，为什么AlertDialog要使用builder模式呢？builder模式优缺点分析。关于builder模式经典的案例可以参考我的弹窗封装库：https://github.com/yangchong211/YCDialog
+
+### 04.子窗口
+- 提到Dialog也是应用窗口，不知道大家对此是否有疑惑。一开始的时候，我一直以为Dialog是子窗口，至少从直观上来说Dialog应该是个子窗口。
+- 但实际上Dialog的确是一个应用窗口。我们看下Dialog的show()方法就知道了。
+    ``` java
+    public void show() {
+        ……
+        if (!mCreated) {
+            dispatchOnCreate(null);
+        }
+    
+        onStart();
+        mDecor = mWindow.getDecorView();
+        ……
+        WindowManager.LayoutParams l = mWindow.getAttributes();
+        ……
+        try {
+            mWindowManager.addView(mDecor, l);
+            mShowing = true;
+    
+            sendShowMessage();
+        } finally {
+        }
+    }
+    
+    public abstract class Window {
+    
+        // The current window attributes.
+        private final WindowManager.LayoutParams mWindowAttributes =
+            new WindowManager.LayoutParams();
+    
+        /**
+         * Retrieve the current window attributes associated with this panel.
+         *
+         * @return WindowManager.LayoutParams Either the existing window
+         *         attributes object, or a freshly created one if there is none.
+         */
+        public final WindowManager.LayoutParams getAttributes() {
+            return mWindowAttributes;
+        }
+    }
+    
+    public interface WindowManager extends ViewManager {
+    
+        public static class LayoutParams extends ViewGroup.LayoutParams
+                implements Parcelable {
+    
+            public LayoutParams() {
+                super(LayoutParams.MATCH_PARENT, LayoutParams.MATCH_PARENT);
+                type = TYPE_APPLICATION;
+                format = PixelFormat.OPAQUE;
+            }
+        }
+    }
+    ```
+- 从代码中可以看到Dialog的WindowManager.LayoutParams是从Window中直接取出来的。而Window.getAttributes()返回的LayoutParams是用无参构造函数创建的，这时LayoutParams.type的值为TYPE_APPLICATION（TYPE_APPLICATION = 2），位于应用Window的层级范围内，所以Dialog属于应用窗口。
+- 那么应用窗口和子窗口就仅仅只是LayoutParams.type的差别？在UI方面就没有直观的差别了吗？
+    - 要搞清楚上面的问题，就得先回顾下控件与子控件的关系。将子控件加入父控件时需要为子控件设置一个布局参数，即LayoutParams。这个布局参数是指子控件相对于父控件的布局参数。
+- Window也有布局参数，即WindowManager.LayoutParams。同理，WindowManager.LayoutParams也应该是窗口相对于父窗口的布局参数。
+    - 经过观察，我得出了这样一个结论：应用窗口的WindowManager.LayoutParams是相对于屏幕，而子窗口的WindowManager.LayoutParams相对于应用窗口。
+- PopupWindow.showAtLocation(View parent, int gravity, int x, int y)是相对于整个窗口来显示PopupWindow的。
+    - 至于相对于哪个窗口，就取决于参数parent属于哪个窗口。在上面的代码中，再新增如下显示PopupWindow的代码。
+    ``` java
+    public class WindowTestActivity extends Activity {
+    
+        private Button popupWin;
+        /**
+         * 在Activity的DecorView上弹出PopupWindow
+         * @param view
+         */
+        public void onClickOnDecorViewPopupSubWindow(View view) {
+            Button btn = new Button(this);
+            btn.setGravity(Gravity.CENTER);
+            btn.setAllCaps(false);
+            btn.setText("在DecorView上弹出的PopupWindow");
+            btn.setBackgroundResource(R.color.colorPrimary);
+            PopupWindow popupWindow = new PopupWindow(btn, ViewGroup.LayoutParams.MATCH_PARENT, 200, true);
+            popupWindow.setBackgroundDrawable(new BitmapDrawable());
+            popupWindow.showAtLocation(view, Gravity.BOTTOM, 0, 0);
+        }
+    
+        /**
+         * 在弹出的应用窗口上弹出PopupWindow
+         * @param view
+         */
+        public void onClickOnPopupAppWinPopupSubWin(View view) {
+            if (popupWin != null) {
+                Button btn = new Button(this);
+                btn.setGravity(Gravity.CENTER);
+                btn.setAllCaps(false);
+                btn.setText("在已弹出的应用窗口上弹出的PopupWindow");
+                btn.setBackgroundResource(R.color.colorPrimary);
+                PopupWindow popupWindow = new PopupWindow(btn, ViewGroup.LayoutParams.MATCH_PARENT, 200, true);
+                popupWindow.setBackgroundDrawable(new BitmapDrawable());
+                popupWindow.showAtLocation(popupWin, Gravity.BOTTOM, 0, 0);//以弹出的应用窗口作为parent
+            }
+        }
+    }
+    ```
+    - 从代码和效果图中可以看出来，只因为参数parent不同，就使得PopupWindow的相对位置不同。而PopupWindow是一个子窗口，所以子窗口的WindowManager.LayoutParams是相对于应用窗口的。
+
 
 
 
