--- a/Read/ReadAndroidWiki/10.Window/05.PopupWindow源码分析.md
+++ b/Read/ReadAndroidWiki/10.Window/05.PopupWindow源码分析.md
@@ -18,21 +18,68 @@
 
 
 
-### 好消息
-- 博客笔记大汇总【16年3月到至今】，包括Java基础及深入知识点，Android技术博客，Python学习笔记等等，还包括平时开发中遇到的bug汇总，当然也在工作之余收集了大量的面试题，长期更新维护并且修正，持续完善……开源的文件是markdown格式的！同时也开源了生活博客，从12年起，积累共计47篇[近20万字]，转载请注明出处，谢谢！
-- **链接地址：https://github.com/yangchong211/YCBlogs**
-- 如果觉得好，可以star一下，谢谢！当然也欢迎提出建议，万事起于忽微，量变引起质变！
-- PopupWindow封装库项目地址：https://github.com/yangchong211/YCDialog
-- [02.Toast源码深度分析](https://github.com/yangchong211/YCBlogs/blob/master/android/Window/02.Toast%E6%BA%90%E7%A0%81%E6%B7%B1%E5%BA%A6%E5%88%86%E6%9E%90.md)
-    - 最简单的创建，简单改造避免重复创建，show()方法源码分析，scheduleTimeoutLocked吐司如何自动销毁的，TN类中的消息机制是如何执行的，普通应用的Toast显示数量是有限制的，用代码解释为何Activity销毁后Toast仍会显示，Toast偶尔报错Unable to add window是如何产生的，Toast运行在子线程问题，Toast如何添加系统窗口的权限等等
-- [03.DialogFragment源码分析](https://github.com/yangchong211/YCBlogs/blob/master/android/Window/03.DialogFragment%E6%BA%90%E7%A0%81%E5%88%86%E6%9E%90.md)
-    - 最简单的使用方法，onCreate(@Nullable Bundle savedInstanceState)源码分析，重点分析弹窗展示和销毁源码，使用中show()方法遇到的IllegalStateException分析
-- [05.PopupWindow源码分析](https://github.com/yangchong211/YCBlogs/blob/master/android/Window/05.PopupWindow%E6%BA%90%E7%A0%81%E5%88%86%E6%9E%90.md)
-    - 显示PopupWindow，注意问题宽和高属性，showAsDropDown()源码，dismiss()源码分析，PopupWindow和Dialog有什么区别？为何弹窗点击一下就dismiss呢？
-- [06.Snackbar源码分析](https://github.com/yangchong211/YCBlogs/blob/master/android/Window/06.Snackbar%E6%BA%90%E7%A0%81%E5%88%86%E6%9E%90.md)
-    - 最简单的创建，Snackbar的make方法源码分析，Snackbar的show显示与点击消失源码分析，显示和隐藏中动画源码分析，Snackbar的设计思路，为什么Snackbar总是显示在最下面
-- [07.弹窗常见问题](https://github.com/yangchong211/YCBlogs/blob/master/android/Window/07.%E5%BC%B9%E7%AA%97%E5%B8%B8%E8%A7%81%E9%97%AE%E9%A2%98.md)
-    - DialogFragment使用中show()方法遇到的IllegalStateException,什么常见产生的？Toast偶尔报错Unable to add window，Toast运行在子线程导致崩溃如何解决？
+
+### 05.LayoutParams.token
+- WindowManager.LayoutParams.token在代码中的注释是指标识窗口。
+    ```
+     /**
+     * Identifier for this window.  This will usually be filled in for
+     * you.
+     */
+     public IBinder token = null;
+    ```
+- 那为什么要标识窗口呢。我们先来看看应用窗口和子窗口的token分别是什么。
+    - 不论是Activity还是Dialog的WindowManager.LayoutParams.token都是被赋值了ActivityRecord.appToken。而ActivityRecord.appToken就是Activity的一个标识。所以应用窗口的token是为了标识该应用窗口属于哪个Activity。
+- 接着再来看看PopupWindow
+    ```
+    public class PopupWindow {
+        private int mWindowLayoutType = WindowManager.LayoutParams.TYPE_APPLICATION_PANEL;
+    
+        public void showAtLocation(View parent, int gravity, int x, int y) {
+            showAtLocation(parent.getWindowToken(), gravity, x, y);
+        }
+    
+        public void showAtLocation(IBinder token, int gravity, int x, int y) {
+            if (isShowing() || mContentView == null) {
+                return;
+            }
+            ……
+            final WindowManager.LayoutParams p = createPopupLayoutParams(token);
+            ……
+            invokePopup(p);
+        }
+        private WindowManager.LayoutParams createPopupLayoutParams(IBinder token) {
+            final WindowManager.LayoutParams p = new WindowManager.LayoutParams();
+    
+            // These gravity settings put the view at the top left corner of the
+            // screen. The view is then positioned to the appropriate location by
+            // setting the x and y offsets to match the anchor's bottom-left
+            // corner.
+            p.gravity = Gravity.START | Gravity.TOP;
+            p.flags = computeFlags(p.flags);
+            p.type = mWindowLayoutType;
+            p.token = token;
+            ……
+            return p;
+        }
+    }
+    ```
+- 从代码中可以看到PopupWindow中WindowManager.LayoutParams.type = WindowManager.LayoutParams.TYPE_APPLICATION_PANEL。TYPE_APPLICATION_PANEL = 1000，属于子窗口层级。所以PopupWindow是子窗口。
+- 另外我们还发现PopupWindow中WindowManager.LayoutParams.token的值并不是ActivityRecord.appToken，而是View…getWindowToken()，也就是AttachInfo.mWindowToken。
+    ```
+    public class View {
+    
+        /**
+         * Retrieve a unique token identifying the window this view is attached to.
+         * @return Return the window's token for use in
+         * {@link WindowManager.LayoutParams#token WindowManager.LayoutParams.token}.
+         */
+        public IBinder getWindowToken() {
+            return mAttachInfo != null ? mAttachInfo.mWindowToken : null;
+        }
+    }
+    ```
+- 一个根View及其下的所有子View都拥有相同的AttachInfo，mWindowToken自然也就相同。而根View又代表着一个窗口，所以mWindowToken可以标识一个窗口。由此得出一个结论：子窗口的token是为了标识哪一个应用窗口是它的父窗口。
 
 
 
