--- a/Read/ReadMeWiki/00.方案实践/43.常见代码优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/43.常见代码优化实践.md
@@ -1,26 +1,80 @@
 #### 目录介绍
-- 01.代码优化有哪些
-- 02.lint检查去除无效代码
-- 03.代码规范优化
-- 04.View异常优化
-- 05.去除淡黄色警告优化
-- 06.合理使用集合
-- 07.Activity不可见优化
-- 08.节制的使用Service
-- 09.线程优化说明
-- 10.glide加载优化
-- 11.不要用静态变量保存核心数据
-- 12.如何查询重复库
-- 13.使用注解限定传入类型
-- 14.懒加载优化
-- 15.四种引用优化
+- 01.代码检测优化
+- 02.控件异常优化
+- 03.四大组件优化
+- 04.Glide加载优化
+    - 4.1 绑定生命周期
+    - 4.2 避免使用圆角控件
+    - 4.3 滑动列表图片优化
+- 05.编码规范优化
+- 06.懒加载优化
+- 07.其他场景优化
 
 
 
-### 好消息
-- 博客笔记大汇总【16年3月到至今】，包括Java基础及深入知识点，Android技术博客，Python学习笔记等等，还包括平时开发中遇到的bug汇总，当然也在工作之余收集了大量的面试题，长期更新维护并且修正，持续完善……开源的文件是markdown格式的！同时也开源了生活博客，从12年起，积累共计N篇[近100万字，陆续搬到网上]，转载请注明出处，谢谢！
-- **链接地址：https://github.com/yangchong211/YCBlogs**
-- 如果觉得好，可以star一下，谢谢！当然也欢迎提出建议，万事起于忽微，量变引起质变！
+
+
+### 04.Glide加载优化
+#### 4.1 绑定生命周期
+- with()绑定生命周期
+    - with(Context context). 使用Application上下文，Glide请求将不受Activity/Fragment生命周期控制。
+    - with(Activity activity). 使用Activity作为上下文，Glide的请求会受到Activity生命周期控制。
+    - with(FragmentActivity activity). Glide的请求会受到FragmentActivity生命周期控制。
+    - with(android.app.Fragment fragment). Glide的请求会受到Fragment 生命周期控制。
+    - with(android.support.v4.app.Fragment fragment). Glide的请求会受到Fragment生命周期控制。
+- 为何要绑定生命周期
+    - with()方法可以接收Context、Activity或者Fragment类型的参数。也就是说我们选择的范围非常广，不管是在Activity还是Fragment中调用with()方法，都可以直接传this。
+    - 那如果调用的地方既不在Activity中也不在Fragment中呢？也没关系，我们可以获取当前应用程序的ApplicationContext，传入到with()方法当中。
+    - 注意with()方法中传入的实例会决定Glide加载图片的生命周期，如果传入的是Activity或者Fragment的实例，那么当这个Activity或Fragment被销毁的时候，图片加载也会停止。如果传入的是ApplicationContext，那么只有当应用程序被杀掉的时候，图片加载才会停止。
+- with绑定生命周期原理
+    - 待完善
+- Glide 是如何解决图片加载生命周期的？（也是bug高发地带）
+    - 当一个界面离开之后，我们更希望当前的图片取消加载，那么 Glide 是怎么做到的呢？Glide 的使用方式上，一定需要传入一个 context 给它。它为什么需要拿上下文呢？原因就是可以根据不同的上下文进行处理，拿到 context （除了application context）之后，Glide做了一件很巧妙的事情，就是在这个界面上追加一个 fragment，由于 fragment 添加到了 activity 上，是可以捕获到生命周期的，因此可以在 destroy 的时候取消掉当前context下的 glide对象中的加载任务。
+    - 为什么标题后面说是 ‘也是bug高发地带’ 呢？ 因为从实现方式上，它是巧妙的利用了fragment的生命周期来实现的‘销毁’动作，那么就类似于另外一个高发bug，延时的匿名内部类(网络请求callback回来)，界面已经销毁，所以当前activity依附的glide也就销毁了的，此时再尝试加载图片的话，就会crash。具体源码中可以看到这里：https://github.com/bumptech/glide/blob/master/library/src/main/java/com/bumptech/glide/Glide.java
+    ```
+      @NonNull
+      private static RequestManagerRetriever getRetriever(@Nullable Context context) {
+        Preconditions.checkNotNull(
+            context,
+            "You cannot start a load on a not yet attached View or a Fragment where getActivity() "
+                + "returns null (which usually occurs when getActivity() is called before the Fragment "
+                + "is attached or after the Fragment is destroyed).");
+        return Glide.get(context).getRequestManagerRetriever();
+      }
+    ```
+
+
+#### 4.2 避免使用圆角控件
+- 避免使用圆角的ImageView
+    - 在实际项目内，经常会用到一些带圆角的图片，或者直接就是圆形的图片。圆形的图片，多数用于一些用户的头像之类的显示效果。
+    - 而在 Android 下，也有大量的类似 XxxImageView 的开源控件，用于操作 Bitmap 以达到一个圆角图片的效果，例如 Github 上比较火的 RoundedImageView。
+    - 它们大部分的原理，是接收到你传递的 Bitmap ，然后再输出一个与原来 Bitmap 等大的新 Bitmap ，在此基础之上，进行圆角的一些处理，这就导致了，实际上会在内存中，多持有一个 Bitmap ，一下一张图片占用的内存就被加倍了。
+- 选择使用Glide切割圆角
+    - 推荐使用glide-transformations ，利用 Glide 的 bitmapTransform() 接口，实现对加载的 Bitmap 的进行一些变换操作。
+    - glide-transformations提供一系类对加载的图片的变换操作，从形状变换到色彩变换，全部支持，基本上满足大部分开发需要，并且它会复用 Glide 的 BitmapPool ，来达到节约内存的目的。
+
+
+#### 4.3 滑动列表图片优化
+- RecyclerView 滑动时不让 Glide 加载图片
+    ```
+    //RecyclerView.SCROLL_STATE_IDLE //空闲状态
+    //RecyclerView.SCROLL_STATE_FLING //滚动状态
+    //RecyclerView.SCROLL_STATE_TOUCH_SCROLL //触摸后状态
+    recyclerView.addOnScrollListener(new RecyclerView.OnScrollListener() {
+        @Override
+        public void onScrollStateChanged(@NonNull RecyclerView recyclerView, int newState) {
+            super.onScrollStateChanged(recyclerView, newState);
+            if (newState == RecyclerView.SCROLL_STATE_IDLE) {
+                LoggerUtils.e("initRecyclerView"+ "恢复Glide加载图片");
+                Glide.with(ImageBrowseActivity.this).resumeRequests();
+            }else {
+                LoggerUtils.e("initRecyclerView"+"禁止Glide加载图片");
+                Glide.with(ImageBrowseActivity.this).pauseRequests();
+            }
+        }
+    });
+    ```
+
 
 
 
